--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
   <body>
     <div class="flex-box">
       <div class="flex-item">
-        <div><h1>basic</h1></div>
+        <div><h2>Kratik Kaisii hai website</h2></div>
         <hr />
         <div>
           <h2>$ 3.95<span> /month</span></h2>
